--- a/web/src/app/report/component/cumulative-funds-chart/cumulative-funds-chart.component.html
+++ b/web/src/app/report/component/cumulative-funds-chart/cumulative-funds-chart.component.html
@@ -18,5 +18,6 @@
 </mat-expansion-panel>
 
 <mat-card>
-  <div #chart class="chart"></div>
+  <no-data *ngIf="!chartData"></no-data>
+  <div #chart class="chart" [class.omit]="!chartData"></div>
 </mat-card>
