--- a/web/src/app/common/component/currency-label/currency-label.component.scss
+++ b/web/src/app/common/component/currency-label/currency-label.component.scss
@@ -6,3 +6,17 @@
 .label {
   margin-left: .5em;
 }
+
+.unknown {
+  width: 15px;
+  height: 15px;
+  font-size: 15px;
+}
+
+.cf,
+.fi {
+  width: 22px;
+  height: 22px;
+  line-height: 22px;
+  text-align: center;
+}
