--- a/web/src/app/importexport/component/import-data-browser/import-data-browser.component.html
+++ b/web/src/app/importexport/component/import-data-browser/import-data-browser.component.html
@@ -1,5 +1,8 @@
-<mat-card *ngIf="importDataList.length > 0">
-  <mat-action-list>
+<mat-card>
+  <ng-template #noData>
+    <no-data></no-data>
+  </ng-template>
+  <mat-action-list *ngIf="importDataList.length > 0; else noData">
     <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let importData of importDataList">
 
       <mat-spinner matListItemIcon class="icon"
