--- a/web/src/app/importexport/component/operation-revise-browser/operation-revise-browser.component.html
+++ b/web/src/app/importexport/component/operation-revise-browser/operation-revise-browser.component.html
@@ -1,5 +1,8 @@
-<mat-card *ngIf="operationReviseList.length > 0">
-  <mat-action-list>
+<mat-card>
+  <ng-template #noData>
+    <no-data></no-data>
+  </ng-template>
+  <mat-action-list *ngIf="operationReviseList.length > 0; else noData">
     <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let operationRevise of operationReviseList">
       <span matListItemTitle>{{operationRevise.parser.name}} ({{operationRevise.account.name}})</span>
       <mat-menu #menu>
