--- a/web/src/app/operation/component/operation-browser/operation-browser.component.html
+++ b/web/src/app/operation/component/operation-browser/operation-browser.component.html
@@ -55,8 +55,8 @@
                  (page)="onPage($event)"></mat-paginator>
 </mat-expansion-panel>
 
-<mat-card *ngIf="operationService.operationPage.operations.length > 0">
-  <mat-action-list>
+<mat-card>
+  <mat-action-list *ngIf="operationService.operationPage.operations.length > 0; else noData">
     <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let operation of operationService.operationPage.operations">
       <span class="row">
         <mat-checkbox (click)="$event.stopPropagation()"></mat-checkbox>
@@ -74,3 +74,7 @@
 <button class="fab" mat-fab (click)="add()">
   <mat-icon>add</mat-icon>
 </button>
+
+<ng-template #noData>
+  <no-data></no-data>
+</ng-template>
