--- a/web/src/app/reference/component/account-browser/account-browser.component.html
+++ b/web/src/app/reference/component/account-browser/account-browser.component.html
@@ -5,7 +5,7 @@
       <ng-template mat-tab-label>
         <mat-icon>account_balance_wallet</mat-icon>
       </ng-template>
-      <mat-action-list>
+      <mat-action-list *ngIf="accounts.length > 0; else noData">
         <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let account of accounts">
           {{account.name}}
           <mat-menu #menu>
@@ -20,7 +20,7 @@
       <ng-template mat-tab-label>
         <mat-icon class="expense">money_off</mat-icon>
       </ng-template>
-      <mat-action-list>
+      <mat-action-list *ngIf="expenses.length > 0; else noData">
         <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let expense of expenses">
           {{expense.name}}
           <mat-menu #menu>
@@ -35,7 +35,7 @@
       <ng-template mat-tab-label>
         <mat-icon class="income">attach_money</mat-icon>
       </ng-template>
-      <mat-action-list>
+      <mat-action-list *ngIf="incomes.length > 0; else noData">
         <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let income of incomes">
           {{income.name}}
           <mat-menu #menu>
@@ -49,3 +49,7 @@
   </mat-tab-group>
 </mat-card>
 <button mat-fab class="fab" (click)="add()"><mat-icon>add</mat-icon></button>
+
+<ng-template #noData>
+  <no-data></no-data>
+</ng-template>
