--- a/web/src/app/reference/component/account-input/account-input.component.html
+++ b/web/src/app/reference/component/account-input/account-input.component.html
@@ -2,18 +2,13 @@
 <ng-template cdkPortal>
   <mat-card>
     <mat-card-content>
-
-      <mat-action-list *ngIf="isNoData()">
-        <button mat-list-item (click)="selectAccount(null)">Nothing</button>
-      </mat-action-list>
-
-      <mat-tab-group *ngIf="!isNoData()" animationDuration="0">
+      <mat-tab-group animationDuration="0">
 
         <mat-tab *ngIf="isAccountTypeEnabled()">
           <ng-template mat-tab-label>
             <mat-icon>account_balance_wallet</mat-icon>
           </ng-template>
-          <mat-action-list>
+          <mat-action-list *ngIf="accounts.length > 0; else noData">
             <button mat-list-item (click)="selectAccount(null)">Nothing</button>
             <button mat-list-item *ngFor="let account of accounts" [value]="account" (click)="selectAccount(account)">{{account.name}}</button>
           </mat-action-list>
@@ -23,7 +18,7 @@
           <ng-template mat-tab-label>
             <mat-icon class="expense">money_off</mat-icon>
           </ng-template>
-          <mat-action-list>
+          <mat-action-list *ngIf="expenses.length > 0; else noData">
             <button mat-list-item (click)="selectAccount(null)">Nothing</button>
             <button mat-list-item *ngFor="let expense of expenses" [value]="expense" (click)="selectAccount(expense)">{{expense.name}}</button>
           </mat-action-list>
@@ -33,7 +28,7 @@
           <ng-template mat-tab-label>
             <mat-icon class="income">attach_money</mat-icon>
           </ng-template>
-          <mat-action-list>
+          <mat-action-list *ngIf="incomes.length > 0; else noData">
             <button mat-list-item (click)="selectAccount(null)">Nothing</button>
             <button mat-list-item *ngFor="let income of incomes" [value]="income" (click)="selectAccount(income)">{{income.name}}</button>
           </mat-action-list>
@@ -42,4 +37,8 @@
       </mat-tab-group>
     </mat-card-content>
   </mat-card>
+</ng-template>
+
+<ng-template #noData>
+  <no-data></no-data>
 </ng-template>
