--- a/web/src/app/reference/component/currency-editor/currency-editor.component.scss
+++ b/web/src/app/reference/component/currency-editor/currency-editor.component.scss
@@ -2,3 +2,11 @@ form {
   display: grid;
   grid-auto-flow: row;
 }
+
+mat-slide-toggle {
+  padding-bottom: 1em;
+}
+
+currency-label {
+  width: 3em;
+}
