--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -18,6 +18,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   opacity: 0;
 }
 
+.omit {
+  display: none;
+}
+
 .spacer {
   flex-grow: 1;
 }
