--- a/web/src/app/report/component/current-fund-chart/current-funds-chart.component.scss
+++ b/web/src/app/report/component/current-fund-chart/current-funds-chart.component.scss
@@ -19,11 +19,24 @@ form {
 }
 
 .account {
-  grid-column: 1 / 4;
+  grid-column: 1 / 3;
   margin-bottom: .2em;
 }
 .account:not(:first-child) {
   margin-top: .4em;
+}
+
+.revised {
+  grid-column: 3 / 4;
+  justify-self: end;
+  align-self: center;
+  font-size: 0.8em;
+
+  .warn {
+    background-color: #ffca28;
+    padding: .4em;
+    border-radius: .6em;
+  }
 }
 
 .common-amount {
