--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -5,7 +5,7 @@
   <button mat-icon-button *ngFor="let command of toolbarService.commands" (click)="command.action()"><mat-icon>{{command.icon}}</mat-icon></button>
 </mat-toolbar>
 <mat-sidenav-container>
-  <mat-sidenav #left position="start" class="left-side" [class.left-side-narrow]="isWideMenu()">
+  <mat-sidenav #left position="start" class="left-side" [class.left-side-desktop]="adaptiveService.desktop">
     <mat-nav-list>
       <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
       <mat-divider></mat-divider>
@@ -23,7 +23,7 @@
       </a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content class="content" [class.content-wide]="isWideScreen()">
+  <mat-sidenav-content class="content">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
