--- a/web/src/app/common/component/no-data/no-data.component.html
+++ b/web/src/app/common/component/no-data/no-data.component.html
@@ -1,4 +1,2 @@
-<div class="container">
-  <mat-icon class="icon">list_alt</mat-icon>
-  <div class="label">No data</div>
-</div>
+<mat-icon class="icon">subject</mat-icon>
+<div class="label">No data</div>
