--- a/web/src/app/common/component/no-data/no-data.component.scss
+++ b/web/src/app/common/component/no-data/no-data.component.scss
@@ -1,25 +1,18 @@
 :host {
-  min-width: 20em;
-  min-height: 20em;
-  flex-grow: 1;
   display: grid;
-  align-items: center;
   justify-items: center;
-  opacity: .3;
-}
-
-.container {
-  display: grid;
-  grid-template-rows: 8em min-content;
-  align-items: center;
-  justify-items: center;
+  height: 100%;
+  color: gray;
+  opacity: .5;
 }
 
 .icon {
-  color: gray;
-  transform: scale(5);
+  align-self: end;
+  font-size: 200px;
+  height: 200px;
+  width: 200px;
 }
 
 .label {
-  font-size: 1.5em;
+  align-self: start;
 }
