--- a/web/src/app/entity/component/entity-browser/entity-browser.component.html
+++ b/web/src/app/entity/component/entity-browser/entity-browser.component.html
@@ -3,19 +3,24 @@
   <toolbar-button name="Sort" icon="sort" (click)="openSort()"></toolbar-button>
 </toolbar-content>
 
-<mat-action-list *ifHasData="entities.length > 0">
-  <button
-    mat-list-item
-    (click)="openEntityAction()"
-    *ngFor="let value of page.values"
-  >
-    <entity-label [entity]="entity" [value]="value"></entity-label>
-  </button>
-</mat-action-list>
+<table mat-table [dataSource]="dataSource" *ifHasData="hasData">
 
-<ng-template>
-  <no-data></no-data>
-</ng-template>
+  <ng-container [matColumnDef]="field" *ngFor="let field of fields">
+    <th mat-header-cell *matHeaderCellDef>{{field}}</th>
+    <td mat-cell *matCellDef="let value">{{value[field]}}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="fields"></tr>
+  <tr mat-row *matRowDef="let value; columns: fields"></tr>
+
+</table>
+
+<mat-paginator [hidePageSize]="true"
+               [showFirstLastButtons]="true"
+               [pageSize]="page.size"
+               [pageIndex]="page.page"
+               [length]="page.total"
+               (page)="onPage($event)"></mat-paginator>
 
 <entry-select>
   <entry-item (select)="edit()">Edit</entry-item>
@@ -23,6 +28,5 @@
 </entry-select>
 
 <fab-group>
-<!--  <button mat-mini-fab (click)="onFirst()"><mat-icon>add</mat-icon></button>-->
   <button mat-fab (click)="add()"><mat-icon>add</mat-icon></button>
 </fab-group>
