--- a/web/src/app/importexport/component/category-mapping-editor-dialog/category-mapping-editor-dialog.component.html
+++ b/web/src/app/importexport/component/category-mapping-editor-dialog/category-mapping-editor-dialog.component.html
@@ -1,4 +1,4 @@
-<div matDialogContent>
+<div `matDialogContent`>
   <category-mapping-view #categoryMappingView [categoryMapping]="categoryMapping"></category-mapping-view>
 </div>
 <div matDialogActions>
