Improved rendering for browser

--- a/web/src/app/common/component/badge/badge.component.html
+++ b/web/src/app/common/component/badge/badge.component.html
@@ -1,4 +1,8 @@
-<div class="label">{{label}}</div>
-<div class="value">
-  <ng-content></ng-content>
+<div class="container">
+  @if(label) {
+    <div class="label">{{label}}</div>
+  }
+  <div class="value">
+    <ng-content></ng-content>
+  </div>
 </div>
