--- a/web/src/app/entity/component/entity-browser/entity-browser.component.html
+++ b/web/src/app/entity/component/entity-browser/entity-browser.component.html
@@ -3,17 +3,43 @@
   <toolbar-button name="Sort" icon="sort" (click)="openSort()"></toolbar-button>
 </toolbar-content>
 
-<table mat-table [dataSource]="dataSource" *ifHasData="hasData">
+<div class="table-container">
+  <table mat-table [dataSource]="dataSource" *ifHasData="hasData">
 
-  <ng-container [matColumnDef]="field" *ngFor="let field of fields">
-    <th mat-header-cell *matHeaderCellDef>{{field}}</th>
-    <td mat-cell *matCellDef="let value">{{value[field]}}</td>
-  </ng-container>
+    <ng-container [matColumnDef]="field.name" *ngFor="let field of entity.fields">
+      <th mat-header-cell *matHeaderCellDef>{{field.name}}</th>
+      <td mat-cell *matCellDef="let value" nowrap="true">
 
-  <tr mat-header-row *matHeaderRowDef="fields"></tr>
-  <tr mat-row *matRowDef="let value; columns: fields"></tr>
+        @if (value[field.name] == null) {
+          <badge>Empty</badge>
+        } @else {
+          @switch (field.type) {
+            @case ('ID') {
+              <badge [matTooltip]="value[field.name]">ID</badge>
+            }
+            @case ('JSON') {
+              <badge [matTooltip]="value[field.name]">JSON</badge>
+            }
+            @case ('AMOUNT') {
+              <amount-label [amount]="value[field.name]"></amount-label>
+            }
+            @case ('REFERENCE') {
+              <badge [matTooltip]="value[field.name].id + ' - ' + value[field.name].name">{{value[field.name].name}}</badge>
+            }
+            @default {
+              {{value[field.name]}}
+            }
+          }
+        }
 
-</table>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="fieldNames; sticky: true"></tr>
+    <tr mat-row *matRowDef="let value; columns: fieldNames"></tr>
+
+  </table>
+</div>
 
 <mat-paginator [hidePageSize]="true"
                [showFirstLastButtons]="true"
