--- a/web/src/app/entity/component/entity-browser/entity-browser.component.scss
+++ b/web/src/app/entity/component/entity-browser/entity-browser.component.scss
@@ -1,1 +1,16 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
+}
 
+.table-container {
+  min-width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.table-cell {
+  white-space: nowrap;
+}
