--- a/web/src/app/entity/component/entity-browser/entity-browser.component.html
+++ b/web/src/app/entity/component/entity-browser/entity-browser.component.html
@@ -4,10 +4,10 @@
 </toolbar-content>
 
 <div class="table-container">
-  <table mat-table [dataSource]="dataSource" *ifHasData="hasData">
+  <table mat-table matSort (matSortChange)="onSort($event)" [dataSource]="dataSource" *ifHasData="hasData">
 
     <ng-container [matColumnDef]="field.name" *ngFor="let field of entity.fields">
-      <th mat-header-cell *matHeaderCellDef>{{field.name}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{field.name}}</th>
       <td mat-cell *matCellDef="let value" nowrap="true">
 
         @if (value[field.name] == null) {
@@ -36,7 +36,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="fieldNames; sticky: true"></tr>
-    <tr mat-row *matRowDef="let value; columns: fieldNames"></tr>
+    <tr mat-row (click)="currentValue = value; entityAction.show()" *matRowDef="let value; columns: fieldNames"></tr>
 
   </table>
 </div>
@@ -48,7 +48,7 @@
                [length]="page.total"
                (page)="onPage($event)"></mat-paginator>
 
-<entry-select>
+<entry-select #entityAction>
   <entry-item (select)="edit()">Edit</entry-item>
   <entry-item (select)="delete()">Delete</entry-item>
 </entry-select>
