--- a/web/src/app/entity/component/entity-browser/entity-browser.component.html
+++ b/web/src/app/entity/component/entity-browser/entity-browser.component.html
@@ -1,12 +1,12 @@
 <toolbar-content>
   <toolbar-button name="Filter" icon="filter_alt" (click)="openFilter()"></toolbar-button>
-  <toolbar-button name="Sort" icon="sort" (click)="openSort()"></toolbar-button>
+<!--  <toolbar-button name="Sort" icon="sort" (click)="openSort()"></toolbar-button>-->
 </toolbar-content>
 
 <div class="table-container">
   <table mat-table matSort (matSortChange)="onSort($event)" [dataSource]="dataSource" *ifHasData="hasData">
 
-    <ng-container [matColumnDef]="field.name" *ngFor="let field of entity.fields">
+    <ng-container [matColumnDef]="field.name" *ngFor="let field of entity().fields">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{field.name}}</th>
       <td mat-cell *matCellDef="let value" nowrap="true">
 
@@ -49,8 +49,8 @@
                (page)="onPage($event)"></mat-paginator>
 
 <entry-select #entityAction>
-  <entry-item (select)="edit()">Edit</entry-item>
-  <entry-item (select)="delete()">Delete</entry-item>
+  <entry-item (select)="edit(); entityAction.close()">Edit</entry-item>
+  <entry-item (select)="delete(); entityAction.close()">Delete</entry-item>
 </entry-select>
 
 <fab-group>
