--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -33,6 +33,9 @@
 }
 
 .content {
+  display: grid;
+  grid-template-rows: min-content 1fr;
+  height: 100%;
   width: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
