--- a/web/src/app/common/component/fab-group/fab-group.component.scss
+++ b/web/src/app/common/component/fab-group/fab-group.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  position: fixed!important;
-  bottom: 1rem;
-  right: 1rem;
+  position: absolute!important;
+  bottom: 20px;
+  right: 20px;
 }
