--- a/web/src/app/settings/component/settings-editor.component.scss
+++ b/web/src/app/settings/component/settings-editor.component.scss
@@ -1,4 +1,10 @@
-form {
+:host {
   display: grid;
-  grid-auto-flow: row;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
