--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -34,3 +34,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 0!important;
   }
 }
+
+mat-slide-toggle {
+  margin-bottom: 20px;
+}
