--- a/web/src/app/reference/component/account-editor/account-editor.component.scss
+++ b/web/src/app/reference/component/account-editor/account-editor.component.scss
@@ -1,8 +1,10 @@
-form {
+:host {
   display: grid;
-  grid-auto-flow: row;
 }
 
-mat-slide-toggle {
-  margin-bottom: 1em;
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 }
+
