--- a/web/src/app/reference/component/currency-editor/currency-editor.component.html
+++ b/web/src/app/reference/component/currency-editor/currency-editor.component.html
@@ -1,21 +1,19 @@
-<mat-card>
-  <mat-card-content>
-    <form [formGroup]="form">
+<common-layout>
+  <form [formGroup]="form">
 
-      <mat-form-field>
-        <mat-label>Name</mat-label>
-        <input matInput formControlName="name">
-      </mat-form-field>
+    <mat-form-field>
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name">
+    </mat-form-field>
 
-      <mat-slide-toggle formControlName="crypto">Crypto</mat-slide-toggle>
+    <mat-slide-toggle formControlName="crypto">Crypto</mat-slide-toggle>
 
-      <mat-form-field>
-        <mat-label>Style</mat-label>
-        <input matInput formControlName="style">
-        <currency-label matSuffix [currency]="form.value" [full]="false"></currency-label>
-        <mat-hint>fi-xx for fiat, cf-xxx for crypto</mat-hint>
-      </mat-form-field>
+    <mat-form-field>
+      <mat-label>Style</mat-label>
+      <input matInput formControlName="style">
+      <currency-label matSuffix [currency]="form.value" [full]="false"></currency-label>
+      <mat-hint>fi-xx for fiat, cf-xxx for crypto</mat-hint>
+    </mat-form-field>
 
-    </form>
-  </mat-card-content>
-</mat-card>
+  </form>
+</common-layout>
