--- a/web/src/app/reference/component/currency-editor/currency-editor.component.scss
+++ b/web/src/app/reference/component/currency-editor/currency-editor.component.scss
@@ -1,10 +1,11 @@
-form {
+:host {
   display: grid;
-  grid-auto-flow: row;
 }
 
-mat-slide-toggle {
-  padding-bottom: 1em;
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 }
 
 currency-label {
