--- a/web/src/app/importexport/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/importexport/component/import-data-view/import-data-view.component.html
@@ -1,3 +1,9 @@
+<toolbar-content title="Import">
+  <toolbar-button name="repeatPreparation" icon="carpenter" (click)="repeatPreparation()"></toolbar-button>
+  <toolbar-button name="startImport" icon="publish" (click)="startImport()"></toolbar-button>
+  <toolbar-button name="close" icon="close" (click)="close()"></toolbar-button>
+</toolbar-content>
+
 <mat-card class="entries-card">
   <mat-tab-group [(selectedIndex)]="tabIndex">
 
