--- a/web/src/app/operation/component/operation-editor/operation-editor.component.html
+++ b/web/src/app/operation/component/operation-editor/operation-editor.component.html
@@ -1,5 +1,8 @@
-<mat-card>
-    <mat-card-content>
-        <operation-view [operation]="operation"></operation-view>
-    </mat-card-content>
-</mat-card>
+<common-layout>
+  <toolbar-content>
+    <toolbar-button name="Save" icon="done" (click)="save()"></toolbar-button>
+    <toolbar-button name="Close" icon="close" (click)="close()"></toolbar-button>
+  </toolbar-content>
+
+  <operation-view [operation]="operation"></operation-view>
+</common-layout>
