--- a/web/src/app/reference/component/currency-editor/currency-editor.component.html
+++ b/web/src/app/reference/component/currency-editor/currency-editor.component.html
@@ -16,4 +16,9 @@
     </mat-form-field>
 
   </form>
+
+  <toolbar-content>
+    <toolbar-button name="Save" icon="done" (click)="save()"></toolbar-button>
+    <toolbar-button name="Close" icon="close" (click)="close()"></toolbar-button>
+  </toolbar-content>
 </common-layout>
