--- a/web/src/app/exchangerate/component/exchange-rate-browser/exchange-rate-browser.component.scss
+++ b/web/src/app/exchangerate/component/exchange-rate-browser/exchange-rate-browser.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: grid;
+}
+
 .mat-line-with-menu {
-  grid-template-columns: 1fr 1fr 1fr min-content;
+  grid-template-columns: min-content 1fr 1fr min-content;
+  grid-gap: 20px;
 }
