--- a/web/src/app/importexport/component/category-mapping-editor/category-mapping-editor.component.html
+++ b/web/src/app/importexport/component/category-mapping-editor/category-mapping-editor.component.html
@@ -1,5 +1,8 @@
-<mat-card>
-  <mat-card-content>
-    <category-mapping-view [categoryMapping]="categoryMapping"></category-mapping-view>
-  </mat-card-content>
-</mat-card>
+<common-layout>
+  <toolbar-content>
+    <toolbar-button name="Save" icon="done" (click)="save()"></toolbar-button>
+    <toolbar-button name="Close" icon="close" (click)="close()"></toolbar-button>
+  </toolbar-content>
+
+  <category-mapping-view [categoryMapping]="categoryMapping"></category-mapping-view>
+</common-layout>
