--- a/web/src/app/importexport/component/import-data-browser/import-data-browser.component.html
+++ b/web/src/app/importexport/component/import-data-browser/import-data-browser.component.html
@@ -1,34 +1,29 @@
-<mat-card>
-  <ng-template #noData>
-    <no-data></no-data>
-  </ng-template>
-  <mat-action-list *ngIf="importDataList.length > 0; else noData">
-    <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let importData of importDataList">
+<mat-action-list *ifHasData="importDataList.length > 0">
+  <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let importData of importDataList">
 
-      <mat-spinner matListItemIcon class="icon"
-                   *ngIf="isInProgress(importData)"
-                   diameter="24"
-                   mode="determinate"
-                   [value]="importData.progress * 100"></mat-spinner>
-      <mat-icon matListItemIcon
-                class="icon"
-                *ngIf="isDone(importData)">done</mat-icon>
-      <mat-icon matListItemIcon
-                class="icon"
-                *ngIf="importData.status == 'FAILED'">warning</mat-icon>
+    <mat-spinner matListItemIcon class="icon"
+                 *ngIf="isInProgress(importData)"
+                 diameter="24"
+                 mode="determinate"
+                 [value]="importData.progress * 100"></mat-spinner>
+    <mat-icon matListItemIcon
+              class="icon"
+              *ngIf="isDone(importData)">done</mat-icon>
+    <mat-icon matListItemIcon
+              class="icon"
+              *ngIf="importData.status == 'FAILED'">warning</mat-icon>
 
-      <span matListItemTitle>{{importData.parser.name}} ({{importData.account.name}})</span>
-      <span matListItemLine *ngIf="importData.message != null">{{importData.message}}</span>
+    <span matListItemTitle>{{importData.parser.name}} ({{importData.account.name}})</span>
+    <span matListItemLine *ngIf="importData.message != null">{{importData.message}}</span>
 
-      <mat-menu #menu>
-        <button mat-menu-item (click)="edit(importData.id)" *ngIf="isEditAvailable(importData)">Edit</button>
-        <button mat-menu-item (click)="cancel(importData)" *ngIf="isInProgress(importData)">Cancel</button>
-        <button mat-menu-item (click)="delete(importData.id)" *ngIf="isDeleteAvailable(importData)">Delete</button>
-      </mat-menu>
-    </button>
-  </mat-action-list>
-</mat-card>
+    <mat-menu #menu>
+      <button mat-menu-item (click)="edit(importData.id)" *ngIf="isEditAvailable(importData)">Edit</button>
+      <button mat-menu-item (click)="cancel(importData)" *ngIf="isInProgress(importData)">Cancel</button>
+      <button mat-menu-item (click)="delete(importData.id)" *ngIf="isDeleteAvailable(importData)">Delete</button>
+    </mat-menu>
+  </button>
+</mat-action-list>
 
-<button class="fab" mat-fab (click)="add()">
-  <mat-icon>add</mat-icon>
-</button>
+<fab-group>
+  <button mat-fab (click)="add()"><mat-icon>add</mat-icon></button>
+</fab-group>
