--- a/web/src/app/reference/component/currency-editor/currency-editor.component.scss
+++ b/web/src/app/reference/component/currency-editor/currency-editor.component.scss
@@ -5,9 +5,9 @@
 form {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin: 20px;
 }
 
 currency-label {
-  width: 3em;
+  width: 20px;
 }
